--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "reddit_comments",
   "version": "1.0.0",
-  "dependencies": {
-    
-  },
+  "dependencies": {},
   "devDependencies": {
-    "babel-preset-es2015": "^6.16.0"
+    "babel-preset-es2015": "^6.16.0",
+    "mysql": "^2.12.0",
+    "promise-mysql": "^3.0.0"
   },
   "repository": {
     "type": "git",
