--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
   "name": "reddit_comments",
   "version": "1.0.0",
+  "scripts": {
+    "start": "gulp webserver"
+  },
   "dependencies": {},
   "devDependencies": {
-    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-es2015": "^6.24.1",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-connect": "^5.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-util": "^3.0.8",
+    "gulp-watch": "^4.3.11",
     "mysql": "^2.12.0",
     "promise-mysql": "^3.0.0"
   },
