--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "start": "gulp webserver"
   },
-  "dependencies": {},
+  "dependencies": {
+    "moment": "^2.18.1"
+  },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
     "gulp": "^3.9.1",
